--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 - name: Tarifs et abonnements
-  link: /tarifs-abonnements/
+  link: /pricing/
   new_window: false
   highlight: false
 - name: Blog
